# CDP-Melbourne-houses

./: Descarga_de_Datos.ipynb  Exploracion_de_Datos.ipynb  FeatureEngineering.ipynb  ModelBaseline.ipynb  ModelSelection.ipynb  README.md  melbourne_houses_batch.py  melbourne_houses_regression-xgboost.joblib  melbourne_houses_streamlit.py  pyproject.toml  requirements.txt  simple_train_pipeline.py
models/: melbourne_model.joblib
