[project]
name = "cdp-melbourne-houses"
version = "0.1.0"
description = "Desarrollo de un proyecto de un proyecto de Ciencia de datos end to end"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "ace-tools>=0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
    "tools>=0.1.9",
    "xgboost>=2.1.4",
    "ydata-profiling>=4.12.2",
]
