[project]
name = "cdp-melbourne-houses"
version = "0.1.0"
description = "Desarrollo de un proyecto de Ciencia de datos end to end"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "geopandas>=1.0.1",
    "geoplot>=0.5.1",
    "jupyter>=1.1.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tools>=0.1.9",
    "xgboost>=2.1.4",
    "streamlit>=1.25.0,<2.0",
    "rasterio>=1.3.9"
]

[tool.poetry]
package-mode = false